Fixed images in browse section on mobile

--- a/src/styles/main/browse.scss
+++ b/src/styles/main/browse.scss
@@ -17,6 +17,10 @@
     transition: transform 0.3s ease-in-out;
     border-radius: 8px;
 
+    @media (min-width: 460px) {
+      height: 200px;
+    }
+
     @include onTablet {
       margin-top: 56px;
       grid-column: span 2;
